--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,26 @@
-# Compiled class file
-*.class
-
-# Log file
+#log文件
 *.log
+logs/
+*.log.*
 
-# BlueJ files
-*.ctxt
+#IDEA文件
+.DS_Store
+.idea/
+.repository/
+*.iml
+*.ipr
+*.iws
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#Eclipse文件
+.metadata/
+.settings/
+*.classpath
+*.project
+*.tmp
+*.bak
+*.swp
+*~.nib
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#编译文件
+target/
+**/target/
