--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <version>1.2.68</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
